--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller eventos</title>
+    <style>
+        .boton-container {
+            padding: 5px;
+            background-color: green;
+            display: inline-block; 
+        }
+    </style>
 </head>
 <body>
+    <div class="boton-container">
     <button onclick="alert('Hola')">Saludar</button>
- 
+    </div>
+    <script src="eventos.js"> </script>
 </body>
 </html>
